# bcs-google-calendar-creator

./: .copier-python-poetry-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  .tool-versions  README.md  pyproject.toml
src/bcs_calendar_creator/: calendar.py  configuration.yaml  configuration.yaml.schema  logging_config.py  main.py  utils.py
